--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Blake2b (64-bit version) in pure Javascript",
   "main": "index.js",
   "dependencies": {
-    "blake2b-wasm": "^1.1.0",
+    "blake2b-wasm": "https://github.com/RabbyHub/mirror-blake2b-wasm#c183fabcb22cf84d463c7b10f25877a8e4afdc6d",
     "nanoassert": "^1.0.0"
   },
   "devDependencies": {
